# aco-camera-reference-converter

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
aco_camera_csv_converter/: app.py  consts.py  lib.py  models.py  services.py  ui.py
src/: lib.py  streamlit_app.py
streamlit/: config.toml  credentials.toml
tests/: test_models.py  test_services.py
