[tool.poetry]
name = "aco-camera-ref-converter"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Taylor Denouden <taylor.denouden@hakai.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.1"
polars = "^1.5.0"
csrspy = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
