[project]
name = "aco_camera_csv_converter"
version = "0.1.0"
package-mode = false
description = "Convert coordinates in Riegel Camera Locations CSVs"
readme = "README.md"
requires-python = ">=3.11"
authors=["Taylor Denouden <taylor.denouden@hakai.org>"]
dependencies = [
    "csrspy>=0.6.0",
    "polars>=1.16.0",
    "streamlit>=1.40.2",
]

[tool.uv.workspace]
members = ["proj"]
